--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                 <ul class="menu-links">
                   <li><a href="index.html">Inicio </a>
                   </li>
+                  <li><a class="btn disabled">Noticias </a>
+                  </li>
                   <li><a href="about.html">Nosotros </a>
                   </li>
                   <li><a class="btn disabled" href="javascript:void(0)" disabled> Tips & Consejos </a>
@@ -148,8 +150,8 @@
     <div class="row">
      <div class="col-lg-12">
       <div class="page-title-name">
-          <h1>LA COMPAÑÍA <br> DIGITAL</h1>
-          <p>Mejora tu vida con tecnología</p>
+          <h1>LA COMPAÑÍA DIGITAL</h1>
+          <p>Inspiramos el buen uso e implementación de tecnologías.</p>
         </div>
         <ul class="page-breadcrumb">
           <li><a href="#"><i class="fa fa-home"></i> Inicio</a> </li>
