--- a/about.html
+++ b/about.html
@@ -54,32 +54,6 @@
  header -->
 
 <header id="header" class="header default">
-  <div class="topbar">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-md-6 xs-mb-10">
-          <div class="topbar-call text-center text-md-left">
-            <ul>
-              <li><i class="fa fa-envelope-o theme-color"></i> contacto@lacompaniadigital.com</li>
-               <li><i class="fa fa-phone"></i> <a href="tel:+7042791249"> <span>+(381) 232 4554 </span> </a> </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-6 col-md-6">
-          <div class="topbar-social text-center text-md-right">
-            <ul>
-              <li><a href="https://www.facebook.com/lacompaniadigital/?_rdc=1&_rdr" target="_blank"><span class="ti-facebook"></span></a></li>
-              <li><a href="https://www.instagram.com/lacompania.digital/" target="_blank"><span class="ti-instagram"></span></a></li>
-              <li><a href="https://twitter.com/CompaniaDigital" target="_blank"><span class="ti-twitter"></span></a></li>
-              <li><a href="https://ar.linkedin.com/company/la-compa%C3%B1%C3%ADa-digital?trk=public_profile_topcard_current_company" target="_blank"><span class="ti-linkedin"></span></a></li>
-              <li><a href="https://www.youtube.com/channel/UCd4Rh7AD4lnpr1AQ5XmOucg" target="_blank"><span class="ti-youtube"></span></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 
   <div class="menu">
     <!-- menu start -->
@@ -99,6 +73,8 @@
               <div class="menu-bar">
                 <ul class="menu-links">
                   <li><a href="index.html">Inicio </a>
+                  </li>
+                  <li><a class="btn disabled">Noticias </a>
                   </li>
                   <li><a class="active" href="about.html">Nosotros </a>
                   </li>
@@ -169,7 +145,7 @@
             <h2>Conocenos </h2>
             <p>Nos preocupamos por nuestros lectores y nuestro contenido, nos dedicamos a brindar la mejor información posible.</p>
           </div>
-          <p>LA COMPAÑÍA DIGITAL está para brindar información actualizada, organizada y de libre acceso sobre los medios digitales y su uso. Conectamos a las personas con intereses tecnológicos similares</p>
+          <p>LA COMPAÑÍA DIGITAL está para brindar información actualizada, organizada y de libre acceso sobre los medios digitales y su uso.</p>
           <a class="button mt-20" href="#"> Leer más</a>
       </div>
       <div class="col-lg-6">
@@ -197,7 +173,7 @@
          <div class="col-lg-4 col-md-4 col-sm-4">
               <h1 class="text-white">03<span class="text-black">.</span></h1>
               <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">We know this in our gut, but what can we do about it? How can we motivate ourselves? One of the most difficult aspects. </p>
+              <p class="text-gray">Gracias al feedback de nuestras visitas y seguidores mejoramos cada día </p>
          </div>
       </div>
   </div>
@@ -208,7 +184,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <div class="section-title text-center">
-          <h5>Un poco de nosotros </h5>
+          <h5>Un poco sobre nosotros </h5>
           <h2 class="title-effect">Nuestro equipo</h2>
           <p>Siempre listos para nuevos proyectos!</p>
         </div>
