--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+<!-- LCD Style -->
+<link rel="stylesheet" type="text/css" href="css/lcd.css" />
+
 <!-- Responsive -->
 <link rel="stylesheet" type="text/css" href="css/responsive.css" />
 
@@ -647,7 +650,7 @@
 </div>
 </section>
 
-<section class="page-section-ptb">
+<section class="page-section-ptb" style="padding: 180px 0;">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12">
@@ -668,61 +671,16 @@
   </div>
 </section>
 
-<section class="page-section-ptb bg-overlay-black-50 parallax" data-jarallax='{"speed": 0.4}' style="background: url(images/bg/14.png);">
-  <div class="container">
-  <div class="row">
-       <div class="col-lg-12 col-md-12">
-        <div class="section-title">
-            <h6 class="text-white">Porque solamente compartimos buenas noticias </h6>
-            <h2 class="text-white title-effect dark">Por que elegirnos </h2>
-          </div>
-       </div>
-    </div>
-   <div class="row">
-     <div class="col-lg-6">
-        <p class="text-white lead">Hoy en día los medios de comunicación se alimentan del miedo de las personas
-        </p>
-        <p class="text-white">
-          Brindando información falsa, no verificada o con titulares engañosos buscan tener más clics en sus publicaciones para aumentar su alcance y ganar dinero.
-        </p>
-        <p class="pt-20 text-white"> <span class="dropcap square dropcap-border">NO</span> hacemos tal cosa. 
-          Somos responsables y muy conscientes de los contenidos que compartimos y sabemos el impacto que podría tener compartir cosas falsas
-        <div class="row mt-30">
-          <div class="col-sm-6 col-xs-6 col-xx-12">
-            <ul class="list list-unstyled list-hand">
-              <li class="text-white">  Información positiva</li>
-              <li class="text-white">  Comunicación creativa </li>
-            </ul>
-          </div>
-          <div class="col-sm-6 col-xs-6 col-xx-12">
-            <ul class="list list-unstyled list-hand">
-              <li class="text-white">  Organizada y conectada</li>
-              <li class="text-white">  Orientada a inspirar </li>
-            </ul>
-          </div>
-         </div>
-    </div>
-    <div class="col-lg-6 sm-mt-30">
-     <!-- <video class="video" style="width: 100%;" poster="video/video.jpg" preload="auto" controls="controls">
-             <source src="video/video.mp4" type="video/mp4">
-             <source src="video/video.webm" type="video/webm">
-             <source src="video/video.ogv" type="video/ogg">
-       </video> -->
-    </div>
-   </div>
-  </div>
-</section>
-
 <section class="action-box black-bg full-width">
   <div class="container">
     <div class="row">
      <div class="col-lg-12 col-md-12">
        <div class="action-box-text">
-        <h3><strong> LA COMPAÑíA DIGITAL</strong></h3>
-        <p class="">Buscamos día a día mejorar tu vida con las noticias de tecnología</p>
+        <h3 id="lcd-title"><strong> LA COMPAÑíA DIGITAL</strong></h3>
+        <p class="lcd-p">Buscamos día a día mejorar tu vida con noticias de tecnología</p>
       </div>
       <div class="action-box-button">
-        <a class="button button-border white" href="#">
+        <a class="button button-border yellow" href="#">
           <span>Proximamente</span>
           <i class="fa fa-exclamation"></i>
        </a>
@@ -731,7 +689,6 @@
   </div>
  </div>
 </section>
-
 
 
 <!--=================================
