--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
                 <div class="testimonial-info">
                   Muy buena plataforma y contenido compartido. Grandes avances! Siempre apoyandolos
                 </div>
-              <div class="author-info"> <strong>Social Fancy - <span>Santiago Helguera</span></strong> </div>
+              <div class="author-info"> <strong>Social Fancy - <span>CEO</span></strong> </div>
             </div>
         </div>
         <div class="item">
