--- a/about.html
+++ b/about.html
@@ -31,6 +31,9 @@
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+<!-- LCD Style -->
+<link rel="stylesheet" type="text/css" href="css/lcd.css" />
+
 <!-- Responsive -->
 <link rel="stylesheet" type="text/css" href="css/responsive.css" />
 
@@ -124,13 +127,9 @@
     <div class="row">
      <div class="col-lg-12">
       <div class="page-title-name">
-          <h1>LA COMPAÑÍA <br> DIGITAL</h1>
-          <p>Mejora tu vida con tecnología</p>
+          <h1 class="lcd-title"> LA COMPAÑíA <br> DIGITAL</h1>
+          <p class="lcd-p">Estamos para ayudarte a mejorar tu vida con tecnología</p>
         </div>
-        <ul class="page-breadcrumb">
-          <li><a href="#"><i class="fa fa-home"></i> Inicio</a> <i class="fa fa-angle-double-right"></i></li>
-          <li><a href="#">Nosotros</a></li>
-        </ul>
      </div>
   </div>
  </div>
@@ -142,10 +141,10 @@
       <div class="col-lg-6 sm-mt-30">
         <div class="section-title mb-20">
             <h6>Quienes somos y qué hacemos</h6>
-            <h2>Conocenos </h2>
-            <p>Nos preocupamos por nuestros lectores y nuestro contenido, nos dedicamos a brindar la mejor información posible.</p>
+            <h2>Sobre nosotros </h2>
+            <p>Nos preocupamos por nuestras visitas y el contenido que les compartimos filtrando la mejor información posible.</p>
           </div>
-          <p>LA COMPAÑÍA DIGITAL está para brindar información actualizada, organizada y de libre acceso sobre los medios digitales y su uso.</p>
+          <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
           <a class="button mt-20" href="#"> Leer más</a>
       </div>
       <div class="col-lg-6">
@@ -157,7 +156,7 @@
   </div>
 </section>
 
-<section class="theme-bg page-section-ptb">
+<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
    <div class="container">
        <div class="row">
          <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
@@ -168,18 +167,18 @@
          <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
               <h1 class="text-white">02<span class="text-black">.</span></h1>
               <h3 class="text-black">Estamos en compañía</h3>
-              <p class="text-gray">Conectados casi todo el tiempo. No olvidemos elegir bien nuestra compañía por que siempre influye en nosotros.</p>
+              <p class="text-gray">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
          </div>
          <div class="col-lg-4 col-md-4 col-sm-4">
               <h1 class="text-white">03<span class="text-black">.</span></h1>
               <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">Gracias al feedback de nuestras visitas y seguidores mejoramos cada día </p>
+              <p class="text-gray">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
          </div>
       </div>
   </div>
 </section>
 
-<section class="page-section-ptb">
+<!-- <section class="page-section-ptb">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8">
@@ -297,9 +296,9 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
-<section class="page-section-ptb gray-bg">
+<!-- <section class="page-section-ptb gray-bg">
   <div class="container">
      <div class="row">
      <div class="col-lg-12 col-md-12">
@@ -352,7 +351,7 @@
     </div>
    </div>
  </div>
-</section>
+</section> -->
 
 
 
@@ -366,7 +365,7 @@
   <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
       <div class="footer-logo">
         <img id="logo-footer" class="mb-20" src="images/logo-06.png" alt="">
-        <p class="pb-10"> Inspiramos el buen uso e implementación de tecnología que potencie nuestras capacidades</p>
+        <p class="pb-10"> Noticias, opiniones y consejos sobre los medios digitales y su uso</p>
       </div>
   </div>
       <div class="col-lg-3 col-md-6 col-sm-6 sm-mb-30">
@@ -375,8 +374,8 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
-          <li><a href="contact.html">Contacto</a></li>
-          <li><a href="#">Oportunidades</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="#">Oportunidades</a></li> -->
         </ul>
       </div>
     </div>
