--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,9 @@
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+<!-- LCD Style -->
+<link rel="stylesheet" type="text/css" href="css/lcd.css" />
+
 <!-- Responsive -->
 <link rel="stylesheet" type="text/css" href="css/responsive.css" />
 
@@ -124,8 +127,8 @@
     <div class="row">
      <div class="col-lg-12">
       <div class="page-title-name">
-          <h1>LA COMPAÑIA DIGITAL</h1>
-          <p>Mejora tu vida con tecnología</p>
+          <h1 class="lcd-title"> LA COMPAÑíA <br> DIGITAL</h1>
+          <p class="lcd-p">Estamos para ayudarte a mejorar tu vida con tecnología</p>
         </div>
         <ul class="page-breadcrumb">
           <li><a href="#"><i class="fa fa-home"></i> Inicio</a> <i class="fa fa-angle-double-right"></i></li>
@@ -138,15 +141,17 @@
 
 <section class="gray-bg blog masonry-main page-section-ptb">
  <div class="container">
-   <div class="row">
-      <div class="col-lg-9">
-        <div class="isotope-filters">
+  <div class="row">
+    <div class="isotope-filters">
           <button data-filter="" class="active">Ver todo</button>
           <button data-filter=".photography">Trabajo a distancia</button>
           <button data-filter=".illustration">Tips & consejos</button>
           <button data-filter=".branding">Marketing digital</button>
           <button data-filter=".web-design">Presencia online</button>
         </div>
+  </div>
+   <div class="row">
+      <div class="col-lg-9">
         <div class="masonry columns-2">
           <div class="grid-sizer"></div>
           <div class="masonry-item">
@@ -535,8 +540,7 @@
 </div>
 
 
-
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>TOP</span></a></div>
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
 
 <!--=================================
  jquery -->
