--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
               <i class="fa fa-rocket"></i>
             </div>
             <h2 class="theme-color">Sitio web en desarollo</h2>
-            <p>Estamos trabajando en los últimos detalles de nuestra web</p>
+            <p class="lcd-p">Estamos trabajando en los últimos detalles de nuestra web</p>
           </div>
         </div>
       </div>
@@ -677,10 +677,10 @@
      <div class="col-lg-12 col-md-12">
        <div class="action-box-text">
         <h3 id="lcd-title"><strong> LA COMPAÑíA DIGITAL</strong></h3>
-        <p class="lcd-p">Buscamos día a día mejorar tu vida con noticias de tecnología</p>
+        <p class="lcd-p">Brindamos día a día noticias de tecnología para mejorar tu vida</p>
       </div>
       <div class="action-box-button">
-        <a class="button button-border yellow" href="#">
+        <a class="button button-border yellow" >
           <span>Proximamente</span>
           <i class="fa fa-exclamation"></i>
        </a>
@@ -707,10 +707,10 @@
       <div class="footer-useful-link footer-hedding">
         <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="contact.html">Contacto</a></li>
-          <li><a href="#">Oportunidades</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="about.html">Nosotros</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <!-- <li><a href="#">Oportunidades</a></li> -->
         </ul>
       </div>
     </div>
@@ -773,7 +773,6 @@
 </div>
 
 </div>
-
 
 
 <div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
