--- a/blog.html
+++ b/blog.html
@@ -162,7 +162,7 @@
               </div>
               <div class="blog-detail">
                   <div class="entry-title mb-10">
-                      <a href="#">Slack: organiza la comunicación con tu equipo</a>
+                      <a href="blog_01.html">Slack: organiza la comunicación con tu equipo</a>
                   </div>
                   <div class="entry-meta mb-10">
                     <ul>
