--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="keywords" content="HTML5 Template" />
-<meta name="description" content="Webster - Responsive Multi-purpose HTML5 Template" />
+<meta name="description" content="Noticias, opiniones y consejos sobre <br> los medios digitales y su uso." />
 <meta name="author" content="potenzaglobalsolutions.com" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>LA COMPAÑÍA DIGITAL - Mejora tu vida con tecnología </title>
