--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="keywords" content="HTML5 Template" />
-<meta name="description" content="Noticias, opiniones y consejos sobre los medios digitales y su uso" />
-<meta name="author" content="potenzaglobalsolutions.com" />
+<meta name="description" content="LA COMPAÑIA DIGITAL - Noticias, opiniones y consejos sobre los medios digitales y su uso">
+<meta name="author" content="cokecolombres.com" />
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Noticias, opiniones y consejos sobre los medios digitales y su uso">
+    <meta property="og:description" content="Brindamos día a día noticias de tecnología para mejorar tu vida - Somos tu COMPAÑIA">
+    <meta property="og:url" content="http://www.lacompaniadigital.com">
+
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>LA COMPAÑÍA DIGITAL - Mejora tu vida con tecnología </title>
 
