--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
       </div>
       <div class="col-lg-6">
          <div class="js-video [youtube, widescreen]">
-           <iframe src="https://www.youtube.com/embed/nrJtHemSPW4?rel=0" allowfullscreen></iframe>
+           <iframe src="https://www.youtube.com/embed/ZOoVOfieAF8" allowfullscreen></iframe>
         </div>
       </div>
      </div>
