--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="http://www.lacompaniadigital.com">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>LA COMPAÑÍA DIGITAL - Mejora tu vida con tecnología </title>
+<title>LA COMPAÑÍA DIGITAL - Mejora tu vida con tecnología</title>
 
 <!-- Favicon -->
 <link rel="shortcut icon" href="images/favicon.ico" />
@@ -84,6 +84,8 @@
                   </li>
                   <li><a class="btn disabled">Noticias </a>
                   </li>
+                  <li><a href="services.html">Servicios </a>
+                  </li>
                   <li><a href="about.html">Nosotros </a>
                   </li>
                   <li><a class="btn disabled" href="javascript:void(0)" disabled> Tips & Consejos </a>
@@ -134,7 +136,7 @@
 <ul>  <!-- SLIDE  -->
     <li data-index="rs-764" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="revolution/assets/slider-06/100x50_95d68-bg.jpg"  data-delay="7990"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
     <!-- MAIN IMAGE -->
-        <img src="revolution/assets/2.png"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+        <img src="revolution/assets/1.png"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
     <!-- LAYERS -->
 
     <!-- LAYER NR. 1 -->
@@ -467,7 +469,7 @@
   <!-- SLIDE  -->
     <li data-index="rs-765" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="300"  data-thumb="revolution/assets/slider-06/100x50_c81f3-ac32d-bg.jpg"  data-delay="8000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
     <!-- MAIN IMAGE -->
-        <img src="revolution/assets/1.png"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+        <img src="revolution/assets/2.png"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
     <!-- LAYERS -->
 
     <!-- LAYER NR. 18 -->
@@ -685,41 +687,43 @@
 <footer class="footer page-section-pt black-bg">
  <div class="container">
   <div class="row">
-  <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
+    <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
       <div class="footer-logo">
         <img id="logo-footer" class="mb-20" src="images/logo-06.png" alt="">
         <p class="pb-10">Noticias, opiniones y consejos sobre los medios digitales y su uso</p>
       </div>
-  </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 sm-mb-30">
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-6 sm-mb-30">
       <div class="footer-useful-link footer-hedding">
         <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="faqs.html">Preguntas frecuentes</a></li>
           <!-- <li><a href="#">Oportunidades</a></li> -->
         </ul>
       </div>
     </div>
     <div class="col-lg-5 col-md-6 col-sm-6">
-    <h6 class="text-white mb-30 mt-10 text-uppercase">Contacto</h6>
-    <ul class="addresss-info">
+      <h6 class="text-white mb-30 mt-10 text-uppercase">Contacto</h6>
+      <ul class="addresss-info">
         <li><i class="fa fa-map-marker"></i> <p>9 de Julio 371, Tucumán, Argentina <br> CP: 4000</p> </li>
         <li><i class="fa fa-phone"></i> <a href="tel:7042791249"> <span>+54 9 381 232 4554 (whatsapp)</span> </a> </li>
         <li><i class="fa fa-envelope-o"></i>contacto@lacompaniadigital.com</li>
       </ul>
       <div class="social-icons color-hover">
-         <ul>
-          <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i> </a></li>
-          <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i> </a></li>
-         </ul>
-       </div>
+        <ul>
+          <li class="social-facebook"><a href="https://www.facebook.com/lacompaniadigital/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+          <li class="social-instagram"><a href="https://www.instagram.com/lacompania.digital/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+          <li class="social-twitter"><a href="https://twitter.com/CompaniaDigital" target="_blank"><i class="fa fa-twitter"></i></a></li>
+          <li class="social-linkedin"><a href="https://www.linkedin.com/company/la-compañía-digital/" target="_blank"><i class="fa fa-linkedin"></i> </a></li>
+          <li class="social-youtube"><a href="https://www.youtube.com/channel/UCd4Rh7AD4lnpr1AQ5XmOucg" target="_blank"><i class="fa fa-youtube"></i> </a></li>
+        </ul>
+      </div>
     </div>
-   </div>
-     <div class="footer-widget mt-20">
+  </div>
+  <div class="footer-widget mt-20">
     <div class="row">
       <div class="col-md-12 text-center">
         <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#"> LA COMPAÑIA DIGITAL </a> All Rights Reserved </p>
@@ -733,7 +737,7 @@
  footer -->
 
 <!-- Modal random -->
- <div class="col-lg-12 col-md-12">
+  <div class="col-lg-12 col-md-12">
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -758,10 +762,9 @@
         </div>
       </div>
     </div>
-</div>
+  </div>
 
 </div>
-
 
 <div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
 
