--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="http://www.lacompaniadigital.com">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-<title>LA COMPAÑÍA DIGITAL - Mejora tu vida con tecnología</title>
+<title>LA COMPAÑÍA DIGITAL asdasd- Mejora tu vida con tecnología</title>
 
 <!-- Favicon -->
 <link rel="shortcut icon" href="images/favicon.ico" />
