--- a/service-web.html
+++ b/service-web.html
@@ -34,6 +34,9 @@
 <!-- Shortcodes -->
 <link rel="stylesheet" type="text/css" href="css/shortcodes/shortcodes.css" />
 
+<!-- marketing -->
+<link rel="stylesheet" type="text/css" href="demo-categories/marketing/css/marketing.css" />
+
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
@@ -141,6 +144,146 @@
  </div>
 </section>
 
+<section id="raindrops" class="raindrops" style="height: 50px;"></section>
+
+<section class="contact-box contact-box-top theme-bg">
+  <div class="container">
+    <div class="row pt-20 pb-40">
+      <div class="col-md-12">
+        <div class="contact-box">
+          <div class="col-12 text-center">
+            <h3 class="text-white title">Mostrá tu marca en internet de la mejor manera</h3>
+            <div class="col-8 offset-2" style="border-bottom: 2px solid #fff;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="page-section-pt bg-overlay-theme-900 parallax" style="background-image: url(images/bg/17.jpg);">
+ <div class="container">
+    <div class="row justify-content-center">
+       <div class="col-md-9">
+        <div class="play-video-section text-center" style="margin-top: -10%;">
+           <div class="content">
+             <h2 class="text-white mb-20">Diseño Web</h2>
+              <h4 class="text-white mb-50"><i>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
+            <br>
+            Webs que están a la altura de los estándares de calidad e innovación internacionales.</i></h4>
+              <img class="img-fluid mx-auto" src="images/objects/mac-book.png" alt="">
+           </div>
+         </div>
+       </div>
+    </div>
+ </div>
+</section>
+
+<section class="marketing-service gray-bg page-section-ptb">
+  <div class="container">
+    <div class="row justify-content-center col-12">
+      <div class="col-lg-8">
+        <div class="section-title text-center">
+            <h2 class="title">Algunos <span class="theme-bg"> Beneficios </span> </h2>
+          </div>
+      </div>
+    </div>
+    <div class="d-flex my-5">
+      <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+        <h1 class="text-black">01<span class="text-black">.</span></h1>
+        <p class="text-gray"><strong>Las páginas web son la mejor manera de mostrar una marca en internet.</strong></p>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
+        <h1 class="text-black">02<span class="text-black">.</span></h1>
+        <p class="text-gray"><strong>Te permiten ser parte de los resultados de búsqueda en google para alcanzar nuevos clientes y potenciar tu negocio.</strong></p>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <h1 class="text-black">03<span class="text-black">.</span></h1>
+        <p class="text-gray"><strong>Es tu presencia en el mundo digital, un medio de comunicación directo con cualquier potencial cliente las 24 horas del día, los 365 días del año.</strong></p>
+      </div>
+    </div>
+    <div class="row no-gutters">
+      <div class="col-lg-4 col-md-6">
+       <div class="feature-text left-icon">
+         <div class="position-relative clearfix">
+          <div class="feature-icon">
+            <span class="fa fa-bullhorn"></span>
+         </div>
+       </div>
+        <div class="feature-info">
+          <h5 class="text-back">Innovación </h5>
+          <p class="mb-0">Estamos a la vanguardia con las últimas tendencias en tecnología.</p>
+        </div>
+      </div>
+     </div>
+     <div class="col-lg-4 col-md-6">
+        <div class="feature-text left-icon">
+         <div class="position-relative clearfix">
+          <div class="feature-icon">
+            <span class="fa fa-bar-chart"></span>
+         </div>
+       </div>
+        <div class="feature-info">
+          <h5 class="text-back">Creatividad</h5>
+          <p class="mb-0">Diferenciamos tu proyecto con creatividad llevándolo a otro nivel. </p>
+        </div>
+      </div>
+     </div>
+     <div class="col-lg-4 col-md-6">
+        <div class="feature-text left-icon">
+         <div class="position-relative clearfix">
+          <div class="feature-icon">
+            <span class="fa fa-file-code-o"></span>
+         </div>
+       </div>
+        <div class="feature-info">
+          <h5 class="text-back">Efectividad</h5>
+          <p class="mb-0">Enfocados en tu público objetivo, resultados e identidad de marca.</p>
+        </div>
+      </div>
+     </div>
+</section>
+
+<section class="page-section-ptb pos-r bg-overlay-black-70 parallax" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/30.png);">
+  <div class="container">
+      <div class="row">
+       <div class="col-lg-12 col-md-12">
+         <div class="section-title text-center">
+            <h2 class="text-white title-effect">Tipos de Web</h2>
+          </div>
+       </div>
+   </div>
+     <div class="row">
+      <div class="col-lg-12 col-md-12">
+      <div class="testimonial-center">
+        <div class="owl-carousel bottom-nav" data-nav-arrow="true" data-items="1" data-lg-items="1" data-md-items="1" data-sm-items="1" data-xs-items="1" data-xx-items="1">
+          <div class="item">
+            <div class="testimonial text-white clean">
+              <div class="author-info"> <strong>Sitio web estático</strong> </div>
+              <div class="testimonial-info"> Se tratan de las páginas webs que solo muestran información permanente tratando de crear un atractivo y enseñando otra salida, ya sea a redes sociales o dar a conocer comercios. <br>
+              Estas webs no tienen ningún tipo de base de datos, aplicativos especiales.</div>            
+            </div>
+          </div>
+        <div class="item">
+            <div class="testimonial text-white clean">
+              <div class="author-info"> <strong>Sitio web dinámico</strong> </div>
+              <div class="testimonial-info">Son las páginas más usadas de la actualidad con funciones avanzadas, importantes e incluso cierre de ventas con sistemas totalmente automatizados. <br>
+              Básicamente puedes crear una herramienta por la cual las personas visiten tu página web o puedes tener incluso una tienda que se retroalimenta.</div>            
+            </div>
+          </div>
+        <div class="item">
+            <div class="testimonial text-white clean">
+              <div class="author-info"> <strong>E commerce</strong> </div>
+              <div class="testimonial-info"> Básicamente se trata de crear una página web que incluye una tienda donde puedas ver el producto, conocer las tallas, saber la disponibilidad, conocer hacia qué país lo envían e incluso pagar directamente en la plataforma. Lo que hace que los procesos de venta se optimicen y se garantice perfectamente la compra de un producto o servicio.</div>            
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="page-section-ptb">
   <div class="container">
      <div class="row">
@@ -155,36 +298,11 @@
           <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
           <a class="button mt-20" href="#"> Leer más</a>
       </div>
-      <div class="col-lg-6">
-         <div class="js-video [youtube, widescreen]">
-           <iframe src="https://www.youtube.com/embed/ZOoVOfieAF8" allowfullscreen></iframe>
-        </div>
-      </div>
      </div>
   </div>
 </section>
 
-<section class="theme-bg page-section-ptb" style="padding: 60px 0;">
-   <div class="container">
-       <div class="row">
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">01<span class="text-black">.</span></h1>
-              <h3 class="text-black">Tenemos tecnología</h3>
-              <p class="text-gray">Realmente creemos en la tecnología como un medio para mejorar nuestras vidas en casi cualquier aspecto. </p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4 mb-30">
-              <h1 class="text-white">02<span class="text-black">.</span></h1>
-              <h3 class="text-black">Estamos en compañía</h3>
-              <p class="text-gray">Conectados casi todo el tiempo no debemos olvidar elegir bien nuestra compañía por que siempre influye en nosotros.</p>
-         </div>
-         <div class="col-lg-4 col-md-4 col-sm-4">
-              <h1 class="text-white">03<span class="text-black">.</span></h1>
-              <h3 class="text-black">Mejoramos día a día</h3>
-              <p class="text-gray">Estamos siempre atentos a los comentarios, opiniones y sugerencias de nuestras visitas, nos impulsan cada día.</p>
-         </div>
-      </div>
-  </div>
-</section>
+
 
 
 <!--=================================
