--- a/service-web.html
+++ b/service-web.html
@@ -284,23 +284,47 @@
   </div>
 </section>
 
-<section class="page-section-ptb">
-  <div class="container">
-     <div class="row">
-      <div class="col-lg-6 sm-mt-30">
-        <div class="section-title mb-20">
-            <h6>Mostrá tu marca en internet de la mejor manera</h6>
-            <h2>Diseño Web</h2>
-            <p>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
-            <br>
-            Webs que están a la altura de los estándares de calidad e innovación internacionales.</p>
-          </div>
-          <p>Brindamos información actualizada, organizada y de libre acceso. <br> Todo sobre los medios digitales y su uso.</p>
-          <a class="button mt-20" href="#"> Leer más</a>
+<div class="container my-5">
+  <div class="row ">
+    <h2 class="mb-3 col-12 text-center">ALGUNAS DE NUESTRAS TECNOLOGÍAS</h2>
+    <div class="d-flex my-5 col-12 offset-1">
+      <div class="col-2">
+        <img src="images/icons/bootstrap.png" class="col-8 mt-4 bn nav-link">
       </div>
-     </div>
+      <div class="col-2">
+        <img src="images/icons/css3.png" class="col-8 bn nav-link">
+      </div>
+      <div class="col-2">
+        <img src="images/icons/html5.png" class="col-8 bn nav-link">
+      </div>
+      <div class="col-2">
+        <img src="images/icons/php7.png" class="col-8 bn nav-link">
+      </div>                      
+      <div class="col-2">
+        <img src="images/icons/js.png" class="col-8 mt-4 bn nav-link">
+      </div>
+    </div>
+    <div class="d-flex mb-8 mt-5 col-12 offset-1">
+      <div class="col-2">
+        <img src="images/icons/ps.png" class="col-8 bn nav-link">
+      </div>
+      <div class="col-3">
+        <img src="images/icons/jquery.png" class="jquery col-10 mt-3 bn nav-link">
+      </div>
+      <div class="col-2">
+        <img src="images/icons/animatecss.png" class="animatecss mt-4 col-12 bn nav-link">
+      </div>                      
+      <div class="col-2">
+        <img src="images/icons/git.png" class="git col-8 mt-4 bn nav-link">
+      </div>
+      <div class="col-2">
+        <img src="images/icons/ai.png" class="git col-8 bn nav-link">
+      </div>
+    </div>
   </div>
-</section>
+</div>
+
+
 
 
 
