--- a/service-web.html
+++ b/service-web.html
@@ -144,16 +144,16 @@
  </div>
 </section>
 
-<section id="raindrops" class="raindrops" style="height: 50px;"></section>
+<section id="raindrops" class="raindrops" style="height: 50px; margin-top: -3%;"></section>
 
 <section class="contact-box contact-box-top theme-bg">
   <div class="container">
-    <div class="row pt-20 pb-40">
+    <div class="row pb-40">
       <div class="col-md-12">
         <div class="contact-box">
           <div class="col-12 text-center">
-            <h3 class="text-white title">Mostrá tu marca en internet de la mejor manera</h3>
-            <div class="col-8 offset-2" style="border-bottom: 2px solid #fff;"></div>
+            <h3 class="text-dark title">Mostrá tu marca en internet de la mejor manera</h3>
+            <div class="col-8 offset-2" style="border-bottom: 2px solid black;"></div>
           </div>
         </div>
       </div>
@@ -165,10 +165,10 @@
  <div class="container">
     <div class="row justify-content-center">
        <div class="col-md-9">
-        <div class="play-video-section text-center" style="margin-top: -10%;">
+        <div class="play-video-section text-center mtn-10" style="">
            <div class="content">
-             <h2 class="text-white mb-20">Diseño Web</h2>
-              <h4 class="text-white mb-50"><i>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
+             <h2 class="text-dark mb-20">Diseño Web</h2>
+              <h4 class="text-dark mb-50"><i>Desarrollamos sitios web que posicionan, potencian, impactan e impulsan negocios generando reacciones.
             <br>
             Webs que están a la altura de los estándares de calidad e innovación internacionales.</i></h4>
               <img class="img-fluid mx-auto" src="images/objects/mac-book.png" alt="">
@@ -306,7 +306,7 @@
     </div>
     <div class="d-flex mb-8 mt-5 col-12 offset-1">
       <div class="col-2">
-        <img src="images/icons/ps.png" class="col-8 bn nav-link">
+        <img src="images/icons/vuejs.png" class="col-8 bn nav-link">
       </div>
       <div class="col-3">
         <img src="images/icons/jquery.png" class="jquery col-10 mt-3 bn nav-link">
@@ -317,16 +317,108 @@
       <div class="col-2">
         <img src="images/icons/git.png" class="git col-8 mt-4 bn nav-link">
       </div>
-      <div class="col-2">
-        <img src="images/icons/ai.png" class="git col-8 bn nav-link">
+      <div class="col-3">
+        <img src="images/icons/laravel.png" class="laravel col-8 bn nav-link">
       </div>
     </div>
   </div>
 </div>
 
+<section class="white-bg page-section-ptb">
+  <div class="container-fluid">
+    <div class="row">
+     <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+      <div class="row justify-content-center col-12">
+        <div class="col-lg-8">
+          <div class="section-title text-center">
+            <h2 class="title">Algunos de <span class="theme-bg">Nuestros Proyectos </span> </h2>
+          </div>
+        </div>
+      </div>
+      <div class="isotope columns-3 popup-gallery">
+        <div class="grid-item photography branding">
+            <div class="portfolio-item">
+             <img src="images/portfolio/ditrabajo.png" alt="">
+               <div class="portfolio-overlay">
+                  <h4 class="text-white"> <a href="portfolio-single-01.html"> diTrabajo </a> </h4>
+                  <span class="text-white"> Sitio web dinámico</span> 
+                </div>
+              <a class="popup portfolio-img" href="images/portfolio/ditrabajo.png"><i class="fa fa-arrows-alt"></i></a>
+          </div>
+        </div>
+        <div class="grid-item photography branding">
+         <div class="portfolio-item">
+             <img src="images/portfolio/colombres-garmendia.png" alt="">
+               <div class="portfolio-overlay">
+                  <h4 class="text-white"> <a href="portfolio-single-01.html"> Colombres Garmendia & Asociados </a> </h4>
+                  <span class="text-white"> Sitio web dinámico</span> 
+                </div>
+              <a class="popup portfolio-img" href="images/portfolio/colombres-garmendia.png"><i class="fa fa-arrows-alt"></i></a>
+          </div>
+        </div>
+        <div class="grid-item illustration">
+         <div class="portfolio-item">
+             <img src="images/portfolio/exelsus.png" alt="">
+               <div class="portfolio-overlay">
+                  <h4 class="text-white"> <a href="portfolio-single-01.html"> Clínica Exelsus </a> </h4>
+                  <span class="text-white"> Sitio web estático</span>
+                </div>
+              <a class="popup portfolio-img" href="images/portfolio/exelsus.png"><i class="fa fa-arrows-alt"></i></a>
+          </div>
+        </div>
+        <div class="grid-item photography branding">
+            <div class="portfolio-item">
+             <img src="images/portfolio/groov.png" alt="">
+               <div class="portfolio-overlay">
+                  <h4 class="text-white"> <a href="portfolio-single-01.html"> GROOV EPISODES </a> </h4>
+                  <span class="text-white"> Sitio web estático</span>
+                </div>
+              <a class="popup portfolio-img" href="images/portfolio/groov.png"><i class="fa fa-arrows-alt"></i></a>
+          </div>
+        </div>
+        <div class="grid-item photography branding">
+         <div class="portfolio-item">
+             <img src="images/portfolio/clic.png" alt="">
+               <div class="portfolio-overlay">
+                  <h4 class="text-white"> <a href="portfolio-single-01.html"> Clic Marketing Digital </a> </h4>
+                  <span class="text-white"> Sitio web estático</span>
+                </div>
+              <a class="popup portfolio-img" href="images/portfolio/clic.png"><i class="fa fa-arrows-alt"></i></a>
+          </div>
+        </div>
+        <div class="grid-item illustration">
+         <div class="portfolio-item">
+             <img src="images/portfolio/coke.png" alt="">
+               <div class="portfolio-overlay">
+                  <h4 class="text-white"> <a href="portfolio-single-01.html"> < / Coke > </a> </h4>
+                  <span class="text-white"> Sitio web estático</span> 
+                </div>
+              <a class="popup portfolio-img" href="images/portfolio/coke.png"><i class="fa fa-arrows-alt"></i></a>
+          </div>
+        </div>
+      </div>
+     </div>
+    </div> 
+</section>
 
-
-
+<section class="action-box theme-bg full-width">
+  <div class="container">
+    <div class="row">
+     <div class="col-lg-12 col-md-12">
+        <div class="action-box-text">
+         <h3 class="text-dark"> Consultanos por el desarrollo de tu propia página,</h3>
+         <p class="text-dark">estamos para potenciar tus tus ideas y llevarlas más allá.</p>
+         </div>
+         <div class="action-box-button">
+        <a class="button button-border black" href="#">
+          <span class="">Comience su proyecto!</span>
+          <i class="fa fa-download"></i>
+       </a>
+       </div>
+    </div>
+  </div>
+  </div>
+</section>
 
 
 <!--=================================
