--- a/service-marketing.html
+++ b/service-marketing.html
@@ -133,8 +133,8 @@
     <div class="row">
      <div class="col-lg-12">
       <div class="text-center">
-          <h3 class="text-white">“Si tu negocio no está en internet, no existe”</h3>
-          <p class="h4 text-muted">+ del 67% de las personas buscan soluciones en línea antes que en cualquier otro lugar</p>
+          <h3 class="text-white">“Con información adecuada puedes anticiparte a los cambios”</h3>
+          <p class="h4 text-muted">La recopilación, análisis y segmentación de datos te permiten enfocarte en lo importante</p>
         </div>
      </div>
   </div>
